[tool.poetry]
name = "tree-tensor-network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^1.2.4"
qiskit-dynamics = "^0.5.1"
qiskit-experiments = "^0.7.0"
qiskit-aer = "^0.15.1"
qiskit-finance = "^0.4.1"
qiskit-ibm-experiment = "^0.4.8"
qiskit-ibmq-provider = "^0.20.2"
qiskit-machine-learning = "^0.7.2"
qiskit-nature = "^0.7.2"
qiskit-optimization = "^0.6.1"
qiskit-terra = "^0.46.3"
torch = "^2.4.1"
torchaudio = "^2.4.1"
torchmetrics = "^1.4.2"
torchvision = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
