[tool.poetry]
name = "tree-tensor-network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^1.2.4"
qiskit-machine-learning = "^0.7.2"
torch = "^2.4.1"
torchaudio = "^2.4.1"
torchmetrics = "^1.4.2"
torchvision = "^0.19.1"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
